--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 
 requirements:
   host:
-    - python >=3.5
+    - python >=3.8
     - pip
-    - flit
+    - flit_core
   run:
-    - python >=3.5
+    - python >=3.8
 
 test:
   imports:
